--- a/ios/loginsocial/Info.plist
+++ b/ios/loginsocial/Info.plist
@@ -53,5 +53,22 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb365644961268563</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>365644961268563</string>
+	<key>FacebookDisplayName</key>
+	<string>LoginSocial</string>
+
+
 </dict>
 </plist>
